@@ -23,6 +23,9 @@ Version 1.4.0:
 	Added a new much more flexible BBCode parser
 	Added new option to auto-update original textbox on blur event occurring on SCEditor.
 		- Thanks to @maiiku for adding this feature
+	Updated sceditor() to return the instance/instances of the editor and protect against
+		re-initialization.
+		- Thanks to @maiiku for reporting
 
 Version 1.3.6:
 	Added Spanish translation
